# EDGESPACE

./: .gitignore  README.md  app.py  main.py  pyproject.toml
sample_images/: README.md
scripts/: benchmark.py  export.py  export_sample_images.py  prepare_datasets.py  prepare_ts_satfire_yolo.py  prepare_wildfire_dataset.py  train.py  train_fire_yolo.py
src/: __init__.py  config.py
src/detection/: __init__.py  detector.py  inference.py  results.py
src/preprocessing/: __init__.py  cloud_mask.py  normalizer.py  spectral.py
src/training/: __init__.py  augmentation.py  dataset_manager.py  trainer.py
