[project]
name = "demo-ais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "opencv-python-headless>=4.13.0.90",
    "streamlit>=1.53.1",
    "ultralytics>=8.4.9",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
